--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tasks</title>
-  </head>
-  <body>
-    <div>Hello</div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Java Web Application Guide</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
+<body>
+
+  <!-- Header Section -->
+  <header class="w3-container w3-center w3-padding-32">
+    <h2 class="w3-margin-top">Welcome to the Java Web Application Guide</h2>
+    <p class="w3-large">Let's build a full-stack web application together!</p>
+  </header>
+
+  <!-- Main Content Section -->
+  <main class="w3-container w3-content w3-padding-32" style="max-width:800px;">
+    <article class="w3-card w3-round-large w3-margin w3-padding">
+      <h4 class="w3-text-teal">Project setup in 420 Seconds:</h4>
+      <ol class="w3-medium w3-text-dark-grey">
+        <li>Create a Maven project (name is your choice)</li>
+        <li>Create a Git repository for the project</li>
+        <li>Add a .gitignore file</li>
+        <li>Make the initial commit</li>
+        <li>Create a new repository on your GitHub account</li>
+        <li>Set the GitHub repository as the origin for the local repo</li>
+        <li>Push local changes to the origin</li>
+      </ol>
+    </article>
+  </main>
+
+  <!-- Footer Section -->
+  <footer class="w3-container w3-center w3-padding-16 w3-margin-top">
+    <p>Need help? first ask google and then ChatGPT even you have any doubts keep working hard man!</p>
+  </footer>
+
+</body>
 </html>
